force-app/main/default/objects/Opportunity/fields/Condiciones_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_comerciales__c</fullName>
    <label>Condiciones comerciales</label>
    <type>TextArea</type>
</CustomField>