force-app/main/default/objects/Opportunity/fields/Especifique__c.field-meta.xml
<CustomField>
    <fullName>Especifique__c</fullName>
    <description>Casilla de texto para describir la opción extra de moneda del cliente que no esté en la lista</description>
    <label>Especifique</label>
    <length>40</length>
    <type>Text</type>
</CustomField>