force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No viable</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
            <value>
                <fullName>Sin respuesta por parte de marca</fullName>
            </value>
            <value>
                <fullName>No se activó campaña</fullName>
            </value>
            <value>
                <fullName>Sin respuesta de talento</fullName>
            </value>
            <value>
                <fullName>Escogieron otros perfiles</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>