force-app/main/default/objects/Opportunity/fields/Mac_Fecha_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Mac_Fecha_de_solicitud__c</fullName>
    <label>Fecha de solicitud</label>
    <type>Date</type>
</CustomField>