force-app/main/default/objects/Opportunity/fields/Mac_Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>Mac_Fecha_inicio__c</fullName>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>