force-app/main/default/objects/Opportunity/fields/Mac_Fecha_objetivo__c.field-meta.xml
<CustomField>
    <fullName>Mac_Fecha_objetivo__c</fullName>
    <label>Fecha objetivo</label>
    <type>Date</type>
</CustomField>