force-app/main/default/objects/Opportunity/fields/Mac_Unidad_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Mac_Unidad_de_negocio__c</fullName>
    <label>Unidad de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match Management</fullName>
            </value>
            <value>
                <fullName>Match Music</fullName>
            </value>
            <value>
                <fullName>Match Sports</fullName>
            </value>
            <value>
                <fullName>N3xt Talent</fullName>
            </value>
            <value>
                <fullName>Jik Creators</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>