force-app/main/default/objects/Opportunity/fields/Mat_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Mat_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>