force-app/main/default/objects/Opportunity/fields/Mat_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Descuento__c</fullName>
    <formula>(Mat_Tarifa__c -  Mat_Tarifa_negociada__c )/ Mat_Tarifa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>