force-app/main/default/objects/Opportunity/fields/Mat_Facturada__c.field-meta.xml
<CustomField>
    <fullName>Mat_Facturada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturada</label>
    <type>Checkbox</type>
</CustomField>