force-app/main/default/objects/Opportunity/fields/Mat_Fecha_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Mat_Fecha_de_facturacion__c</fullName>
    <label>Fecha de facturación</label>
    <type>Date</type>
</CustomField>