force-app/main/default/objects/Opportunity/fields/Mat_Marca__c.field-meta.xml
<CustomField>
    <fullName>Mat_Marca__c</fullName>
    <formula>Campaign.Mat_Marca__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>