force-app/main/default/objects/Opportunity/fields/Mat_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Mat_Moneda__c</fullName>
    <label>Moneda</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mat_Monedas_Match</valueSetName>
    </valueSet>
</CustomField>