force-app/main/default/objects/Opportunity/fields/Mat_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Mat_Nombre__c</fullName>
    <formula>&quot;Oportunidad &quot; +  Campaign.Name + &quot; &quot; +   Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>