force-app/main/default/objects/Opportunity/fields/Mat_Talento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Talento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talento</label>
    <referenceTo>Mat_Talentos__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>