force-app/main/default/objects/Opportunity/fields/Mat_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa__c</fullName>
    <label>Tarifa</label>
    <summarizedField>Mat_Servicios_de_oportunidad__c.Mat_Tarifa__c</summarizedField>
    <summaryForeignKey>Mat_Servicios_de_oportunidad__c.Mat_Oportunidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>