force-app/main/default/objects/Opportunity/fields/Mat_Tarifa_moneda_extranjera__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa_moneda_extranjera__c</fullName>
    <formula>Mat_Tarifa__c /  Mat_Tasa_de_cambio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa moneda extranjera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>