force-app/main/default/objects/Opportunity/fields/Mat_Tasa_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tasa_de_cambio__c</fullName>
    <label>Tasa de cambio</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>