force-app/main/default/objects/Opportunity/fields/Mat_Tipo_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tipo_de_cambio__c</fullName>
    <label>Tipo de cambio</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>