force-app/main/default/objects/Opportunity/fields/Mat_Valor_estimado__c.field-meta.xml
<CustomField>
    <fullName>Mat_Valor_estimado__c</fullName>
    <label>Valor estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>