force-app/main/default/objects/Opportunity/fields/Mat_Valor_negociado__c.field-meta.xml
<CustomField>
    <fullName>Mat_Valor_negociado__c</fullName>
    <label>Valor negociado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>